<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#121212"
    tools:context=".Fragments.ManagerLoginFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/barbershop_logo2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_silver"
        android:gravity="center"
        android:minWidth="340dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.269">

        <EditText
            android:id="@+id/managerNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="username"
            android:background="@drawable/input_layout_black"
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="4dp"
            android:drawableTint="#000000"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/managerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_layout_black"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/managerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="password"
            android:background="@drawable/input_layout_black"
            android:drawableStart="@drawable/icon_lock_black"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/managerIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="password"
            android:background="@drawable/input_layout_black"
            android:drawableStart="@drawable/icon_security_black"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/manager_id"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/managerLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_layout"
            android:backgroundTint="#1C1C1C"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/managerBackToLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_layout"
            android:backgroundTint="#1C1C1C"
            android:text="@string/back_to_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>